Project/assets/css/style.css
body { height: 100%; margin: 0; padding: 0; background-color: rgb(10, 30, 30); overflow: hidden;}

nav > img{
	float: left;
}

header{
	width: 100%;
	float: left;
}

#avans_globe{
	height: 40px;
}

#menu_bar{
	float: left;
	width: 80%
}

#map_bar{
	height: 50px;
}

#map_button{
	float: right;
	height: 100%;
	width: 20%;
	color:white;
	background-color: #33b3ff;
}

#showhide{
	width: 100%;
	height: 100%;
	text-align: center;
	padding: 15px;
	transform:rotate(180deg);
	-ms-transform:rotate(180deg); /* IE 9 */
	-webkit-transform:rotate(180deg); /* Opera, Chrome, and Safari */
}

/*nav
{
	margin: 30px 30px;
	margin-bottom: 0;
	height: auto;
	width: auto;
	font-family: Arial, 'Opens Sans';
}*/
 
#map-canvas{
	position: absolute;
	top: 0;
	bottom: 0%;
	left: 0;
	width: 100%;
	z-index: 0;
}

input, select, textarea{
    color: #000000 !important;
}
 
#content{
	color: white;
	margin-top: 205px;
	margin: 75px;
}

#mapClick{
	position: absolute;
	top: 0px;
	left: 0%;
	right: 0%;
	height: 100%;
	width: auto;
	z-index: 1;
}
 
section{
	position: absolute;
	top: 0px; 
	left: 10%;
	right: 10%;
	background-color: rgba(0, 0, 0, .9);
	height: 100%;
	width: auto;
	z-index: 2;
}

footer{
	position: absolute;
	bottom: 0px;
	color: white;
	font-size: 10pt;
	width: 100%;
	text-align:center;

}

footer > p{
	margin-bottom: 0px;
	margin-top: 0px;
}

